testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_left_bracket/case3.expect.out
error: expected '{' in unicode escape, found '"'
  ==> case3.cj:14:5:
   | 
14 |     "\u"
   |      ~~^ expected '{'
   |      |
   |      because it is in this Unicode escape
   | 

error: expected '{' in unicode escape, found '2'
  ==> case3.cj:15:12:
   | 
15 | "cangjie \u23"
   |          ~~^ expected '{'
   |          |
   |          because it is in this Unicode escape
   | 

error: expected '{' in unicode escape, found 'c'
  ==> case3.cj:16:13:
   | 
16 |     "cangjie \ucangjie2"
   |              ~~^ expected '{'
   |              |
   |              because it is in this Unicode escape
   | 

error: expected '{' in unicode escape, found '\'
  ==> case3.cj:17:4:
   | 
17 | "\u\u\"
   |  ~~^ expected '{'
   |  |
   |  because it is in this Unicode escape
   | 

4 errors generated, 4 errors printed.
